:bug: feat: Fixing password error alignment

--- a/assets/css/components/_form.css
+++ b/assets/css/components/_form.css
@@ -29,6 +29,7 @@
 
 .input--container-password {
   position: relative;
+  text-align: center;
 }
 
 .show-password-icon {
